package games.players;

import games.HangManGame.hangman.HangedManPlayer;

public abstract class Player implements HangedManPlayer {
    private int id;
    private String name;
    private Player[] players;



}
