public class Piece(){
    public Piece() {
    }
}